--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.40",
     "@types/react-dom": "^18.2.17",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-custom-roulette": "^1.4.1",
