--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.17",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-custom-roulette": "^1.4.1",
